--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "git push gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -55,7 +55,13 @@
   },
   "devDependencies": {
     "gh-pages": "^6.1.0",
+    "husky": "^8.0.3",
     "sass": "^1.69.5",
     "tailwindcss": "^3.4.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run predeploy"
+    }
   }
 }
