--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "test": "react-scripts test",
     "predeploy": "npm run build",
     "deploy": "git push gh-pages -d build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
