Modify Github Actions

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -65,4 +65,5 @@ jobs:
 
       - name: Deploy to GitHub Pages
         run: |
+          npm install -g gh-pages
           gh-pages -d build -b gh-pages --add
