--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -54,16 +54,18 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      # - name: Checkout Repository
-        # uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-      # - name: Download artifact
-      #   uses: actions/download-artifact@v2
-      #   with:
-      #     name: built-site
-      #     path: ./build
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: built-site
+          path: ./build
 
       - name: Deploy to GitHub Pages
-        run: |
-          npm install -g gh-pages
-          gh-pages -d build -b gh-pages --add
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
+          publish_branch: gh-pages
